<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.douwevos.javatop</groupId>
	<artifactId>JavaTop</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<dependencies>
		<!-- <dependency> <groupId>com.sun</groupId> <artifactId>tools</artifactId> 
			<version>${jdk.version}</version> <scope>system</scope> <systemPath>${toolsjar}</systemPath> 
			</dependency> -->
	</dependencies>


	<properties>
		<!-- change it to point to your tools.jar from your JDK -->
		<jdk.version>11</jdk.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>com.github.douwevos.javatop.Main</mainClass>
						</manifest>
					</archive>
				
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifest>
							<mainClass>com.github.douwevos.javatop.Main</mainClass>
						</manifest>
					</archive>
				</configuration>
				<executions>
					<execution>
						<id>assemble-all</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<jdkToolchain>
						<version>9</version>
					</jdkToolchain>
					<compilerArgs>
						<arg>--add-modules</arg>
						<arg>jdk.internal.jvmstat,jdk.management.agent,java.rmi,java.management.rmi,java.desktop,java.sql</arg>
						<arg>--add-exports</arg>
						<arg>jdk.management.agent/jdk.internal.agent=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED,</arg>
						<arg>--add-exports</arg>
						<arg>java.rmi/sun.rmi.server=ALL-UNNAMED,</arg>
						<arg>--add-exports</arg>
						<arg>java.rmi/sun.rmi.transport=ALL-UNNAMED,</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
